# spyn

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docsrc/: index.rst
spyn/: util.py
spyn/ppi/: binary_pairs_kv.py  markov.py  naive_bayes_graph.py  pairs_pot.py  pot.py  potter.py
spyn/ppi/old/: naive_binary_network.py
spyn/ppi/pstan/: io.py
spyn/utils/: color.py  daf.py  order_conserving.py  ordered_set.py  special.py
tests/: test_pot.py
