[metadata]
name = spyn
display_name = spyn
version = 0.0.4
root_url = https://github.com/thorwhalen
url = https://github.com/thorwhalen/spyn
description = Tools to transform data into "model-less" operable inference objects
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
author = Thor Whalen
keywords = 
	machine learning
	artificial intelligence
	AI
	ML
	probabilistic inference
	Bayesian


[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	matplotlib
	numpy
	pandas
	
[metadata.classifiers]
	Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
