[metadata]
name = spyn
version = 0.0.6
url = https://github.com/thorwhalen/spyn
platforms = any
description_file = README.md
display_name = spyn
root_url = https://github.com/thorwhalen
description = Tools to transform data into "model-less" operable inference objects
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
author = Thor Whalen
keywords = 
		machine learning
		artificial intelligence
		AI
		ML
		probabilistic inference
		Bayesian
classifiers = 
		Intended Audience :: Developers
		Topic :: Software Development
		License :: OSI Approved :: Apache Software License
		Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	matplotlib
	numpy
	pandas

